--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Generate Datas
 on:
-  schedule:
+  schedule: # execute every 12 hours
     - cron: "* */12 * * *"
   workflow_dispatch:
 jobs:
@@ -8,6 +8,7 @@ jobs:
     name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
+      # Snake Animation
       - uses: Platane/snk@master
         id: snake-gif
         with:
